# legal-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  railway.json  temp.ipynb  tests.txt
alembic/: env.py
alembic/versions/: 17a39782f6c2_initial_users_conversations_messages.py  52cf2fe53da2_add_trace_id_to_messages.py  d13f9d6b4f9a_add_summarized_through_turn_to_.py
arabic_ingest/: MANIFEST.md  README.md  __init__.py  arabic_text.py  articles.py  articles_preview.json  chunker.py  chunks_law131.json  chunks_law174.json  config.py  embeddings.py  glyph_repair.py  ingest.py  inspect_corpus.py  pdf_extractor.py  preview_articles.py  query_intent.py  requirements.txt  retrieval.py  search.py  structure.py  structure_law174.json  vector_store.py
embedding_service/: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml  modal_app.py  requirements.txt
embedding_service/app/: __init__.py  auth.py  config.py  main.py  model.py  normalize.py
scripts/: ask.py  check_embedding_consistency.py  check_retrieval.py  extract_normalize.py  fix_payload_indexes.py  migrate_to_cloud.py  phase4_validate.py  phase5_validate.py  phase6_validate.py  railway_smoke_test.py  verify_migration.py
src/legal_assistant/: __init__.py  auth.py  config.py  embedding_client.py  llm.py  memory.py  observability.py
src/legal_assistant/api/: __init__.py  app.py  deps.py  schemas.py
src/legal_assistant/db/: models.py  qdrant.py  session.py
src/legal_assistant/rag/: __init__.py  agent.py  citation_guard.py  law_identity.py  prompts.py  retrieval.py  (+1 more)
(+4 files in other folders)
