[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legal-assistant"
version = "0.1.0"
description = "Arabic-language legal research assistant for Egyptian lawyers"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings==2.14.0",
    "qdrant-client==1.18.0",
    "python-dotenv==1.2.2",
    "tqdm==4.67.3",
    "requests==2.33.1",
    "certifi==2026.4.22",
    "langchain==1.3.0",
    "langchain-google-genai==4.2.7",
    "sqlalchemy[asyncio]==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.18.5",
    "bcrypt==5.0.0",
    "fastapi==0.139.0",
    "uvicorn[standard]==0.46.0",
    "pyjwt==2.13.0",
    "sse-starlette==3.4.5",
    "langfuse==4.14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/legal_assistant"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI's Depends()-in-default is the idiomatic pattern, not a real bug

[tool.pytest.ini_options]
testpaths = ["tests"]
